2-service/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notifications
  name: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  strategy: {}
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
      - env:
        - name: WORKLOAD
          value: Echo
        - name: ECHO_STR
          value: notification sent
        - name: ECHO_DELAY
          value: 1000ms
        image: lalyos/allspark
        name: notifications
        ports:
        - containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notifications
  name: notifications
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: notifications
status:
  loadBalancer: {}
