2-service/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:frontend.default.svc.cluster.local:8080
spec:
  rules:
  -   host: frontend.default.k3z.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 8080
